# lab2

./: ArraySequence.cpp  ArraySequence.h  ArraySequenceTest.h  CMakeLists.txt  DynamicArrayTest.h  Dynamic_array.h  Line_Form.cpp  Line_Form.h  LinkSeqTest.h  PolTest.h  Vector.h  comp.h  interface.h  interfaceForLineForm.h  interfaceForVector.h  link_list.h  link_listTest.h  linkseq.h  main.cpp  polynomial.cpp  polynomial.h  sequence.h
